--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="search">Search</string>
     <string name="downloads">Downloads</string>
+    <string name="please_wait">Please wait</string>
+    <string name="payment_status_error">Payment Status cannot be verified at the moment, Please try again later</string>
+    <string name="payment_unsuccessful">Your payment was unsuccessful</string>
+    <string name="payment_successful">Payment was successful!</string>
 </resources>
