--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,12 @@
     <string name="payment_status_error">Payment Status cannot be verified at the moment, Please try again later</string>
     <string name="payment_unsuccessful">Your payment was unsuccessful</string>
     <string name="payment_successful">Payment was successful!</string>
+    <string name="title_activity_example_buttom">ExampleButtom</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="shop">Shop</string>
+    <string name="transactions">Transactions</string>
+    <string name="prayer_store">Prayer Store</string>
+    <string name="my_prayers">My Prayers</string>
 </resources>
