--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="info">Info</string>
     <string name="scripture_references">Scripture references</string>
     <string name="preview">Preview</string>
+    <string name="prayer_heading">Prayer Heading</string>
 </resources>
