--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="info">Info</string>
     <string name="scripture_references">Scripture references</string>
     <string name="preview">Preview</string>
+    <string name="default_notification_channel_id">Auto Notifications</string>
+    <string name="purchased">Purchased</string>
+    <string name="payment_failed">This payment was unsucessful</string>
 </resources>
