add share menu item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="purchased">Purchased</string>
     <string name="payment_failed">This payment was unsuccessful</string>
     <string name="prayer_heading">Prayer Heading</string>
+    <string name="share">Share</string>
 </resources>
