--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="prayer_heading">Prayer Heading</string>
     <string name="turn_off_alarm">Reminder On</string>
     <string name="turn_on_alarm">Reminder Off</string>
+    <string name="share">Share</string>
 </resources>
